@@ -15,6 +15,8 @@ tracforms-0.5 (yet unreleased):
  * fix single-line input broken by literal single quotes in user input
  * allow correct presentation of multi-line content in text area fields
  * prevent UnicodeEncodeError on using nested TracForm operation as form value
+ * allow unexpected values in form details page to enable recovery from bad
+   TracForm definitions, like duplicated field names, through web_ui alone
 
 
 tracforms-0.4.1 (22-Jul-2011):
